# tts-trying

./: .env.example  .gitignore  AGENTS.md  agent.md
apps/telegram-bot/: package-lock.json  package.json
apps/telegram-bot/src/: main.ts
apps/telegram-bot/src/application/: url.ts
apps/telegram-bot/src/config/: env.ts
apps/telegram-bot/src/domain/: types.ts
apps/telegram-bot/src/infrastructure/db/: sqliteRepository.ts
apps/telegram-bot/src/infrastructure/http/: ttsServiceClient.ts
apps/telegram-bot/src/interfaces/telegraf/: bot.ts
apps/telegram-bot/tests/: sqliteRepository.test.ts  url.test.ts
apps/tts-service/: pyproject.toml
apps/tts-service/app/: main.py
apps/tts-service/app/application/: job_service.py
apps/tts-service/app/config/: settings.py
apps/tts-service/app/domain/: entities.py  model_registry.py  ports.py
apps/tts-service/app/infrastructure/: firecrawl_parser.py  lm_studio_client.py  mlx_tts_engine.py
apps/tts-service/app/infrastructure/db/: sqlite_repository.py
apps/tts-service/app/interfaces/http/: router.py  schemas.py
apps/tts-service/tests/integration/: test_job_lifecycle.py
apps/tts-service/tests/unit/: test_job_service_utils.py  test_repository.py
specs/: architecture.md  telegraf-client-implementation.md  tts-server-implementation.md
